# Rollin

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
account/: urls.py  views.py
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_review.py
config/: logger.py
fetch_data/: apps.py  helper.py  urls.py  views.py
rollin/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
static/css/: styles.css
strategy/: backtesting.py  urls.py  views.py
templates/: base.html  home.html  login.html  signup.html
templates/fetch_data/: fetch_ticker.html  ticker_home.html
templates/indicators/: home.html
templates/websocket/: websocket.html
websocket/: consumers.py  urls.py  views.py
